--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -36,3 +36,22 @@ jobs:
         run: ./gradlew applyPatches
       - name: Build
         run: ./gradlew build
+         name: Create Release Tag
+        uses: rickstaa/action-create-tag@v1
+        with:
+          tag: "v1_20_1-${{ env.Compile_Date }}"
+          message: "1.20.1 Build ${{ env.Compile_Date }}"
+      - name: Upload Build to Release
+        uses: svenstaro/upload-release-action@v2
+        with:
+          repo_token: ${{ secrets.GITHUB_TOKEN }}
+          file: build/libs/*
+          file_glob: true
+          tag: "v1_20_1-${{ env.Compile_Date }}"
+          release_name: "1.20.1_DirtyFolia_Dev-${{ env.Compile_Date }}"
+          overwrite: true
+          prerelease: false
+          body: |
+            DirtyFolia Build
+            Version: 1.20.1
+            Build Time: ${{ env.Compile_Date }}
