--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -36,7 +36,7 @@ jobs:
         run: ./gradlew applyPatches
       - name: Build
         run: ./gradlew build
-        name: Create Release Tag
+      - name: Create Release Tag
         uses: rickstaa/action-create-tag@v1
         with:
           tag: "v1_20_1-${{ env.Compile_Date }}"
